--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(addPositionID)
 export(annotateIntSites)
+export(calcSampleAbunds)
 export(collapseReplicatesCalcAbunds)
 export(createIntUCSCTrack)
 export(defaultGenomeFileMappings)
@@ -15,6 +16,7 @@ export(intSiteDistributionPlot)
 export(nearestGenomicFeature)
 export(numShortHand)
 export(ppNum)
+export(scanStats)
 export(stdIntSiteFragments)
 export(validateGenomeFileMap)
 importFrom(magrittr,'%>%')
