--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ export(numShortHand)
 export(ppNum)
 export(scanStats)
 export(stdIntSiteFragments)
+export(tuneScanStatistics)
 export(validateGenomeFileMap)
 importFrom(magrittr,'%>%')
